# hpc-skill-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml  labels.json  milestones.json  pull_request_template.md  repository.json  seed_issues.json
agent-bench/: README.md
collections/: ai-hpc.json  bioinformatics-workflows.json  containers.json  core-hpc.json  data-movement.json  facility-ops.json  gpu-mpi-performance.json  scheduler-basics.json  simulation-workflows.json  software-stacks.json  training-onboarding.json  workflow-engines.json
docs/: ADOPTER_PLAYBOOK.md  ADOPTION_GUIDE.md  ADOPTION_WORKSHEET.md  AGENT_BENCHMARKS.md  AGENT_BENCHMARK_CAMPAIGN.md  AGENT_BENCHMARK_DASHBOARD.html  AGENT_BENCHMARK_PLAN.md  AGENT_BENCHMARK_REPORT.md  AGENT_BENCHMARK_SMOKE_PLAN.md  AGENT_BENCHMARK_V0_4_PLAN.md  AGENT_BENCHMARK_V0_5_PLAN.md  AGENT_INTEGRATION.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_REPORT.md  BLINDED_REVIEW.md  CITATION.md  CLI.md  COLLECTIONS.md  COMMUNITY_CONTEXT.md  COMMUNITY_EVIDENCE.md  COMMUNITY_INTAKE.md  COMMUNITY_LAUNCH.md  COMMUNITY_PILOT_v0.6.0.md  COMPATIBILITY.md  CONTRIBUTOR_LADDER.md  DOMAIN_REVIEWERS.md  ECOSYSTEM_PROPOSAL.md  GITHUB_DISCUSSIONS.md  GITHUB_MILESTONES.md  GITHUB_OWNER_CHECKLIST.md  GITHUB_PUBLISHING.md  GITHUB_REPOSITORY_SETUP.md  GOVERNANCE.md  INTAKE_RECEIPTS.md  INTEGRATION_GUIDE.md  LAUNCH_READINESS.md  MAINTAINER_GUIDE.md  MAINTAINER_HANDOFF.md  (+37 more)
(+678 files in other folders)
